# whistle

./: .gitignore  README.md  examples.md  pyproject.toml
.github/workflows/: ci.yml
examples/: incident_response.whistle  medical.whistle  night_patrol.whistle  research_ensemble.whistle
src/whistle/: __init__.py  __main__.py  compiler.py  parser.py  validator.py
src/whistle_dsl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_whistle.py
