[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whistle-dsl"
version = "0.1.0"
description = "Intent DSL for Working Animal Architecture — replaces system-prompt sprawl with structured, compiled commands."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "SuperInstance"},
]
keywords = ["dsl", "llm", "prompt-engineering", "orchestration", "working-animal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
]

[project.urls]
Homepage = "https://github.com/SuperInstance/whistle"
Repository = "https://github.com/SuperInstance/whistle"
Issues = "https://github.com/SuperInstance/whistle/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
whistle = "whistle.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
